--- a/src/main/resources/templates/reservationConfirmation.html
+++ b/src/main/resources/templates/reservationConfirmation.html
@@ -60,5 +60,9 @@
     </tr>
   </table>
 </section>
+<form action="/books" method="GET">
+    <input type="submit" value="Back">
+</form>
+
 </body>
 </html>
