--- a/src/main/resources/templates/reservationConfirmation.html
+++ b/src/main/resources/templates/reservationConfirmation.html
@@ -60,7 +60,7 @@
     </tr>
   </table>
 </section>
-<form action="/books" method="GET">
+<form action="/" method="GET">
     <input type="submit" value="Back">
 </form>
 
