--- a/src/main/resources/templates/book-form.html
+++ b/src/main/resources/templates/book-form.html
@@ -13,7 +13,7 @@
     <h2 th:text="${book != null} ? 'Edit Book' : 'Add New Book'"></h2>
 
     <!-- Ако book != null (уредување постоечка книга) -->
-    <form th:if="${book != null}" th:action="@{/books/edit/{bookId}(id=${book.id})}" method="post">
+    <form th:if="${book != null}" th:action="'/books/edit/' + ${book.id}" method="post">
         <label>Title:</label>
         <input type="text" name="title" th:value="${book.title}" required>
 
